# parallel-computing

./: .gitignore  CMakeLists.txt  Makefile  main.c  performance.py
homework_1/: CMakeLists.txt  bubblesort.c  bucket.c  counting.c  gauss.c  matrix.c  quicksort.c  selection.c
src/: CMakeLists.txt  brick.c  bubblesort.c  bucket.c  counting.c  dijkstra.c  gauss.c  insert.c  matrix.c  quicksort.c  selection.c  sieve.c  utils.h
